--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 15.2 =
+
+* Fix: Free version deactivation bug
+* New: Spanish Translation
+* Updated: Templates have body classes
+
 = 15.1.8 =
 
 * Fix: Payment term notifications not being sent.
