--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,18 @@
+= 16.0 =
+
+* New: Zapier Support
+* New: Recurring invoices re-write
+* New: ApproveMe integration support for Default Theme
+* New: Client set payments supoort for new Default Theme
+* New: Allow to easily filter default line item
+* New: Square support
+* Updated: Subscription payments, new information
+* Updated: PO, Localization
+* Updated: Free version now necessary
+* Fix: WooCommerce customer not logged in
+* Fix: Payment terms display issue
+* Fix: WooCommerce Checkout w/ Shipping
+
 = 15.2 =
 
 * Fix: Free version deactivation bug
