--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,22 @@
-= 16.0 =
+= 16.0.5 =
+
+* Fix: date warnings displayed above recurring payments section
+* Updated: Adjust recurring invoice editing, so the start date is updated after every change.
+* Updated: Prevent future invoices from being generated.
+* New: New filter when clients are created, si_create_user_args
+* New: Don't repeat line item headers via filter: si_show_all_line_item_headers
+* New: Payment Term notifications have new shortcodes
+* Fix: Localization issues for estimates template
+
+= 16.0.4 =
+
+* Updated: New action for Default theme to show more info
+* Fix: Subscription payment method using wrong object param
+* Fix: Prevent error for non WP object
+* Updated: Better show the deposit payment with the Default theme
+* Updated: Woo integration updates for cached product
+
+= 16.0.1 =
 
 * New: Zapier Support
 * New: Recurring invoices re-write
