--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,17 @@
+= 16.6 =
+
+* Update: Reverting GMT offset changes from last release. Needs more testing.
+* Update: Offsite payment processor update
+* New: Filtering for checkboxes
+* Update: Line items totals display updated for the admin.
+* New: Save a default list of add-ons to be active on setup.
+* Update/Fix: WooCommerce exclusive/inclusive tax updates
+* Update: WooCommerce compatibility update
+
 = 16.5.7 =
 
-* Udpate: Point of Contact add-on will no longer force itself if unused.
-* Udpate: Use GMT offset everywhere
+* Update: Point of Contact add-on will no longer force itself if unused.
+* Update: Use GMT offset everywhere
 * Fix: Signature add-on errors for default theme
 
 = 16.5.6 =
