--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+= 17.0.7 =
+
+* Fix: Prevent non existant users from being attributed to possible payments
+* Fix: CSS Updates
+* NEW: Notification shortcode for first_name
+* Fix: Notes not saving for estimates before sending
+* Update: PHP version check for WooCommerce integration
+* Fix: Estimate acceptance actions bug fix for invoice creation
+* Update: GMT for all history
+
+
 = 17.0.6 =
 
 * Update: Improved error messaging for PDF Service.
