--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 18.0.9 =
+
+* Update: Double check some meta for recurring and subscription payment invoice duplication, in case the WP_Query meta query is being hijacked.
+
 = 18.0.8 =
 
 * Update: Notification previews respect which format is selected
