--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 18.1.1 =
+
+* Fix: Payment receipts for subscription payments not completing under certain circumstances.
+
 = 18.1 =
 
 * Update: Stripe SDK Updated
