--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 18.1.3 =
+
+* Fix: Improved PHP 7.1 Support
+* Fix: Stripe error section shown when there are no errors
+* Fix: Stripe settings not saving correctly
+
 = 18.1.1 =
 
 * Fix: Payment receipts for subscription payments not completing under certain circumstances.
