--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+= 18.1.5 =
+
+* Fix: Notification admin optimization
+* Fix: Notification content not resetting
+* Fix: Notification content reset with HTML
+* Fix: Add-on require logic causing errors on some setups
+
 = 18.1.4 =
 
 * Temp: Temporarily removing comments add-on
