--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 18.1.6 =
+
+* Fix/Refactor: Line item commenting
+* New: Filter to bypass service fee
+* New: Filter for WooCommerce product import
+
 = 18.1.5 =
 
 * Fix: Notification admin optimization
