--- a/languages/sprout-invoices-ar_SA.po
+++ b/languages/sprout-invoices-ar_SA.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-08-16 14:54-0800\n"
 "PO-Revision-Date: 2017-03-10 09:28-0800\n"
-"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
-"Language-Team: Sprout Venture <l18n@sproutapps.co>\n"
+"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
+"Language-Team: Sprout Venture <l18n@sproutinvoices.com>\n"
 "Language: ar_SA\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5176,7 +5176,7 @@ msgstr "البيان"
 
 #: plugins/sprout-invoices-pro/controllers/projects/Projects.php:202
 msgid ""
-"SI now integrates with <a href=\"https://sproutapps.co/sprout-invoices/"
+"SI now integrates with <a href=\"https://sproutinvoices.com/sprout-invoices/"
 "integrations/\">Project Panorama</a>."
 msgstr ""
 
@@ -6889,7 +6889,7 @@ msgid ""
 "Generating a free license key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps license key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https://"
-"sproutapps.co</a>)."
+"sproutinvoices.com</a>)."
 msgstr ""
 
 #: plugins/sprout-invoices-pro/views/admin/sprout-invoices-dashboard.php:99
