--- a/languages/sprout-invoices-cs_CZ.po
+++ b/languages/sprout-invoices-cs_CZ.po
@@ -10,7 +10,7 @@ msgstr ""
 "X-Generator: Poedit 1.5.7\n"
 "Project-Id-Version: Stable (latest release)\n"
 "POT-Creation-Date: \n"
-"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
+"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
 "Language-Team: \n"
 
 #: views/admin/dashboards/invoices.php:58
@@ -20,7 +20,7 @@ msgstr ""
 
 #: controllers/projects/Projects.php:196
 msgid ""
-"SI now integrates with <a href=\"https://sproutapps.co/sprout-invoices/"
+"SI now integrates with <a href=\"https://sproutinvoices.com/sprout-invoices/"
 "integrations/\">Project Panorama</a>."
 msgstr ""
 
@@ -5787,7 +5787,7 @@ msgid ""
 "Generating a free license key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps license key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https://"
-"sproutapps.co</a>)."
+"sproutinvoices.com</a>)."
 msgstr ""
 
 #: views/admin/sprout-invoices-dashboard.php:31
@@ -6025,16 +6025,16 @@ msgid "TEMP"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://sproutapps.co/sprout-invoices/"
+msgid "https://sproutinvoices.com/sprout-invoices/"
 msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
 "App allows for any WordPress site to accept estimates, create invoices and "
-"receive invoice payments. Learn more at <a href=\"https://sproutapps.co"
+"receive invoice payments. Learn more at <a href=\"https://sproutinvoices.com"
 "\">Sprout Apps</a>."
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://sproutapps.co"
+msgid "https://sproutinvoices.com"
 msgstr ""
