--- a/languages/sprout-invoices-en_GB.po
+++ b/languages/sprout-invoices-en_GB.po
@@ -10,7 +10,7 @@ msgstr ""
 "X-Generator: Poedit 1.5.7\n"
 "Project-Id-Version: Development (trunk)\n"
 "POT-Creation-Date: \n"
-"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
+"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
 "Language-Team: \n"
 
 #: controllers/invoices/Invoices_Deposit.php:33
@@ -359,22 +359,22 @@ msgid "TEMP"
 msgstr "TEMP"
 
 #. Plugin URI of the plugin/theme
-msgid "https://sproutapps.co/sprout-invoices/"
-msgstr "https://sproutapps.co/sprout-invoices/"
+msgid "https://sproutinvoices.com/sprout-invoices/"
+msgstr "https://sproutinvoices.com/sprout-invoices/"
 
 #. Description of the plugin/theme
 msgid ""
 "App allows for any WordPress site to accept estimates, create invoices and "
-"receive invoice payments. Learn more at <a href=\"https://sproutapps.co"
+"receive invoice payments. Learn more at <a href=\"https://sproutinvoices.com"
 "\">Sprout Apps</a>."
 msgstr ""
 "App allows for any WordPress site to accept quotations, create invoices and "
-"receive invoice payments. Learn more at <a href=\"https://sproutapps.co"
+"receive invoice payments. Learn more at <a href=\"https://sproutinvoices.com"
 "\">Sprout Apps</a>."
 
 #. Author URI of the plugin/theme
-msgid "https://sproutapps.co"
-msgstr "https://sproutapps.co"
+msgid "https://sproutinvoices.com"
+msgstr "https://sproutinvoices.com"
 
 #: views/templates/checkout/confirmation.php:36
 #: views/templates/invoice/invoice.php:39
@@ -721,12 +721,12 @@ msgid ""
 "Generating a free license key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps license key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https://"
-"sproutapps.co</a>)."
+"sproutinvoices.com</a>)."
 msgstr ""
 "Generating a free licence key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps licence key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https://"
-"sproutapps.co</a>)."
+"sproutinvoices.com</a>)."
 
 #: views/admin/sprout-invoices-dashboard.php:33
 msgid "The Sprout Invoices Flow"
