--- a/languages/sprout-invoices-es_ES.po
+++ b/languages/sprout-invoices-es_ES.po
@@ -14,11 +14,11 @@ msgstr ""
 "Language: es-ES"
 
 #. Plugin URI of the plugin/theme
-msgid "https://sproutapps.co/sprout-invoices/"
+msgid "https://sproutinvoices.com/sprout-invoices/"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://sproutapps.co"
+msgid "https://sproutinvoices.com"
 msgstr ""
 
 #: controllers/invoices/Invoices_Deposit.php:33
@@ -265,11 +265,11 @@ msgstr "TEMPORAL"
 #. Description of the plugin/theme
 msgid ""
 "App allows for any WordPress site to accept estimates, create invoices and "
-"receive invoice payments. Learn more at <a href=\"https://sproutapps.co\">"
+"receive invoice payments. Learn more at <a href=\"https://sproutinvoices.com\">"
 "Sprout Apps</a>."
 msgstr ""
 "La app permite a cualquier sitio web aceptar presupuestos, crear facturas y "
-"recibir pagos de facturas. Aprende más en <a href=\"https://sproutapps.co\">"
+"recibir pagos de facturas. Aprende más en <a href=\"https://sproutinvoices.com\">"
 "Sprout Apps</a>."
 
 #: views/templates/checkout/confirmation.php:36 
@@ -377,12 +377,12 @@ msgid ""
 "Generating a free license key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps license key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https:"
-"//sproutapps.co</a>)."
+"//sproutinvoices.com</a>)."
 msgstr ""
 "¡Generar una clave de licencia gratuita no se requiere, pero lleva nada más "
 "que segundos! Tu email será usado para crear una clave de licencia única de "
 "Sprout Apps que activará próximas características (como pueden ser nuevos "
-"add-on desde <a href=\"%s\">https://sproutapps.co</a>)."
+"add-on desde <a href=\"%s\">https://sproutinvoices.com</a>)."
 
 #: views/admin/sprout-invoices-dashboard.php:39
 msgid ""
