--- a/languages/sprout-invoices-fr_FR.po
+++ b/languages/sprout-invoices-fr_FR.po
@@ -6150,12 +6150,12 @@ msgstr "Obtenir la licence"
 msgid ""
 "Generating a free license key is not required but takes seconds! Your email will be "
 "used to create a unique Sprout Apps license key that will enable future features (i.e. "
-"easy add-on installs from <a href=\"%s\">https://sproutapps.co</a>)."
+"easy add-on installs from <a href=\"%s\">https://sproutinvoices.com</a>)."
 msgstr ""
 "Générer une clé de licence gratuite n’est pas obligatoire, mais ne prend que quelques "
 "secondes! Votre e-mail sera utilisé pour créer une clé de licence « Sprout Apps » "
 "unique qui permettra de futures fonctionnalités ( ex: installation facilité "
-"d’extensions à partir <a href=\"%s\"> https://sproutapps.co </a>)."
+"d’extensions à partir <a href=\"%s\"> https://sproutinvoices.com </a>)."
 
 #: views/admin/sprout-invoices-dashboard.php:69
 #, php-format
