--- a/languages/sprout-invoices-nl_NL.po
+++ b/languages/sprout-invoices-nl_NL.po
@@ -10,7 +10,7 @@ msgstr ""
 "X-Generator: Poedit 1.5.7\n"
 "Project-Id-Version: Development (trunk)\n"
 "POT-Creation-Date: \n"
-"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
+"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
 "Language-Team: \n"
 
 #: controllers/invoices/Invoices_Deposit.php:33
@@ -351,18 +351,18 @@ msgid "TEMP"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://sproutapps.co/sprout-invoices/"
+msgid "https://sproutinvoices.com/sprout-invoices/"
 msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
 "App allows for any WordPress site to accept estimates, create invoices and "
-"receive invoice payments. Learn more at <a href=\"https://sproutapps.co"
+"receive invoice payments. Learn more at <a href=\"https://sproutinvoices.com"
 "\">Sprout Apps</a>."
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://sproutapps.co"
+msgid "https://sproutinvoices.com"
 msgstr ""
 
 #: views/templates/checkout/confirmation.php:36
@@ -713,7 +713,7 @@ msgid ""
 "Generating a free license key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps license key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https://"
-"sproutapps.co</a>)."
+"sproutinvoices.com</a>)."
 msgstr ""
 
 #: views/admin/sprout-invoices-dashboard.php:33
