--- a/languages/sprout-invoices-pt_PT.po
+++ b/languages/sprout-invoices-pt_PT.po
@@ -359,20 +359,20 @@ msgid "TEMP"
 msgstr "Temporário"
 
 #. Plugin URI of the plugin/theme
-msgid "https://sproutapps.co/sprout-invoices/"
-msgstr "https://sproutapps.co/sprout-invoices/"
+msgid "https://sproutinvoices.com/sprout-invoices/"
+msgstr "https://sproutinvoices.com/sprout-invoices/"
 
 #. Description of the plugin/theme
 msgid ""
 "App allows for any WordPress site to accept estimates, create invoices and receive "
-"invoice payments. Learn more at <a href=\"https://sproutapps.co\">Sprout Apps</a>."
+"invoice payments. Learn more at <a href=\"https://sproutinvoices.com\">Sprout Apps</a>."
 msgstr ""
 "App permite qualquer site WordPress aceitar os orçamentos, criar facturas e receber "
-"pagamentos de fatura. Saiba mais em <a href=“https://sproutapps.co”>Apps Sprout</a>."
+"pagamentos de fatura. Saiba mais em <a href=“https://sproutinvoices.com”>Apps Sprout</a>."
 
 #. Author URI of the plugin/theme
-msgid "https://sproutapps.co"
-msgstr "https://sproutapps.co"
+msgid "https://sproutinvoices.com"
+msgstr "https://sproutinvoices.com"
 
 #: views/templates/checkout/confirmation.php:36 views/templates/invoice/invoice.php:39
 msgid "Invoice %s"
@@ -714,12 +714,12 @@ msgstr "Obter licença"
 msgid ""
 "Generating a free license key is not required but takes seconds! Your email will be "
 "used to create a unique Sprout Apps license key that will enable future features (i."
-"e. easy add-on installs from <a href=\"%s\">https://sproutapps.co</a>)."
+"e. easy add-on installs from <a href=\"%s\">https://sproutinvoices.com</a>)."
 msgstr ""
 "Gerar uma chave de licença livre não é necessário, mas só leva alguns segundos! Seu "
 "e-mail será usado para criar uma chave de licença Sprout Apps única que permitirá "
 "futuros recursos (Ex.: instalar add-on facilmente a partir de <a href=\\”%s"
-"\\”>https://sproutapps.co</a>)."
+"\\”>https://sproutinvoices.com</a>)."
 
 #: views/admin/sprout-invoices-dashboard.php:33
 msgid "The Sprout Invoices Flow"
