--- a/languages/sprout-invoices-uk.po
+++ b/languages/sprout-invoices-uk.po
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-28 14:36-0800\n"
 "PO-Revision-Date: 2016-03-02 08:58-0800\n"
-"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
+"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/sprout-apps/sprout-"
 "invoices/language/uk/)\n"
 "MIME-Version: 1.0\n"
