--- a/languages/sprout-invoices.po
+++ b/languages/sprout-invoices.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-19 10:23-0800\n"
 "PO-Revision-Date: 2018-03-19 10:23-0800\n"
-"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
-"Language-Team: Sprout Venture <l18n@sproutapps.co>\n"
+"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
+"Language-Team: Sprout Venture <l18n@sproutinvoices.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3549,7 +3549,7 @@ msgstr ""
 
 #: plugins/sprout-invoices-pro/controllers/projects/Projects.php:194
 msgid ""
-"SI now integrates with <a href=\"https://sproutapps.co/sprout-invoices/"
+"SI now integrates with <a href=\"https://sproutinvoices.com/sprout-invoices/"
 "integrations/\">Project Panorama</a>."
 msgstr ""
 
@@ -4947,7 +4947,7 @@ msgid ""
 "Generating a free license key is not required but takes seconds! Your email "
 "will be used to create a unique Sprout Apps license key that will enable "
 "future features (i.e. easy add-on installs from <a href=\"%s\">https://"
-"sproutapps.co</a>)."
+"sproutinvoices.com</a>)."
 msgstr ""
 
 #: plugins/sprout-invoices-pro/views/admin/sprout-invoices-dashboard.php:99
@@ -7399,7 +7399,7 @@ msgstr ""
 #: plugins/sprout-invoices-pro/bundles/liquid-web-addons/views/admin/dashboard.php:20
 #, php-format
 msgid ""
-"We've also generated an account at <a href=\"%s\">sproutapps.co</a> for you "
+"We've also generated an account at <a href=\"%s\">sproutinvoices.com</a> for you "
 "with the username of <code>%s</code>; in order to keep your password secure "
 "you can recover it <a href=\"%s\">here</a>."
 msgstr ""
