--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,27 @@
+= 19.5.5 =
+
+* NEW: Show the notification descriptions on the main admin page
+* NEW: Authorize.net line items
+* NEW: Points of Contact Add-on updated to allow manual sends
+* Fix: Compatibility fix with plugins that like to share CSS with broad selectors on pages they shouldn't.
+* Fix: Advanced ID Generation for recurring/cloned invoices
+
+= 19.5.4 =
+
+* Fix: Recurring notifications not sending to all associated client users
+
+= 19.5.3 =
+
+* Fix: CSS Issue on payment page
+* Fix: Conditional bug that prevented the credit card form to show
+
+= 19.5.2 =
+
+* Fix: PHP Notices for older installs upgrading
+* Fix: A few Basic/Freelancer add-ons removed after a review that they shouldn't have been included
+* Fix: Service fee added after a fee was already added
+* Fix: Partial payments updated for better payment workflow, and styling
+
 = 19.5.1 =
 
 * Fix: Address not saving for some client records
