--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+= 19.7.2 =
+
+* Fix: Metabox saved when other posts are saved, i.e. WooCommerce orders.
+
+= 19.7.1 =
+
+* Update: Zapier Updates
+* Fix: Partial Payments setting invoices as paid under specific circumstances.
+* Fix: Notifications sent without complete information
+* Fix: WooCommerce product for integration will be recreated
+* New: Project times filter - si_project_get_associated_times
+
 = 19.7 =
 
 * Update: Zapier authentication simplification
