--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,20 @@
+= 19.8.3 =
+
+* Fix: TOS Agreement add-on incompatibility with e-signature add-on.
+* Update: Handle Stripe user tokens different.
+
+= 19.8.2 =
+
+* New: New filter for getting visitor ip, 'si_get_user_ip'.
+* Fix: Notification fixes for new interest email.
+* Fix: Adding interest fix.
+* Fix: Error prevention on dashboard.
+* Fix: Styling updates to prevent conflict.
+* Fix: Don't show hidden invoices within reports.
+* Fix: Zapier payments info.
+* Fix: Square payment processor API keys incorrectly used.
+
+
 = 19.8 =
 
 * NEW: TOS Add-on
